<?xml version="1.0" encoding="UTF-8"?>

<!--
Copyright (C) 2024, 2025, Yasumasa Suenaga

This file is part of nativebinder.

nativebinder is free software: you can redistribute it and/or modify
it under the terms of the GNU Lesser General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

nativebinder is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU Lesser General Public License for more details.

You should have received a copy of the GNU Lesser General Public License
along with nativebinder. If not, see <http://www.gnu.org/licenses/>.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.yasuenag</groupId>
    <artifactId>nativebinder-example</artifactId>
    <name>NativeBinder Example</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
    </properties>

    <version>0.1.2</version>

    <repositories>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/YaSuenag/nativebinder</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.yasuenag</groupId>
            <artifactId>nativebinder</artifactId>
            <version>0.2.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                    </compilerArgs>
                    <debug>true</debug>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>run</id>
                        <phase>exec</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${java.home}/bin/java</executable>
                            <arguments>
                                <argument>-classpath</argument>
                                <classpath/>
                                <argument>-Djava.library.path=${project.build.directory}</argument>
                                <argument>--enable-native-access=ALL-UNNAMED</argument>
                                <argument>com.yasuenag.nativebinder.examples.manyargs.Main</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>run-with-errcode</id>
                        <phase>exec</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${java.home}/bin/java</executable>
                            <arguments>
                                <argument>-classpath</argument>
                                <classpath/>
                                <argument>-Djava.library.path=${project.build.directory}</argument>
                                <argument>--enable-native-access=ALL-UNNAMED</argument>
                                <argument>com.yasuenag.nativebinder.examples.manyargs.Main</argument>
                                <argument>--with-errcode</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>linux</id>
            <activation>
                <os>
                    <name>Linux</name>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.5.0</version>
                        <executions>
                            <execution>
                                <id>compile-nativelib</id>
                                <phase>prepare-package</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>gcc</executable>
                                    <arguments>
                                        <argument>-shared</argument>
                                        <argument>-fPIC</argument>
                                        <argument>-o</argument>
                                        <argument>${project.build.directory}/libmanyargs.so</argument>
                                        <argument>src/main/c/manyargs.c</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>windows</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.5.0</version>
                        <executions>
                            <execution>
                                <id>compile-nativelib</id>
                                <phase>prepare-package</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>x86_64-w64-mingw32-gcc</executable>
                                    <arguments>
                                        <argument>-shared</argument>
                                        <argument>-o</argument>
                                        <argument>${project.build.directory}/manyargs.dll</argument>
                                        <argument>src/main/c/manyargs.c</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
